attempt to fix wrapping #1

--- a/style.css
+++ b/style.css
@@ -46,13 +46,10 @@ body {
   max-width: 400px;
 }
 
-.flexItem:first-child {
-  margin: 0;
-}
-
 table {
   background-image: linear-gradient(#2F4F4F, #f1f2f4);
   margin-bottom: 15px;
+  max-width: 100%;
 }
 
 th {
